--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1",
-        "php-amqplib/thumper": "^0.5.0"
+        "php-amqplib/thumper": "^0.5.0",
+        "symfony/options-resolver": "^2.7|^3.0"
     },
     "autoload": {
         "psr-4": {
