--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "keywords": ["lumen","rpc","library"],
     "license": "MIT",
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.2",
         "php-amqplib/thumper": "^0.5.0",
-        "symfony/options-resolver": "^2.7|^3.0"
+        "symfony/options-resolver": "^2.7|^3.0|^4.3"
     },
     "autoload": {
         "psr-4": {
